fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -768,11 +768,10 @@ header {
     height: 350px;
   }
   .hero-content{ 
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 20px;
-    width: 100%;
+    display: flex;
+    width: 37%;
     font-size: xx-small;
+    margin-top: -70px;
   }
 
   .hero-video {
@@ -845,6 +844,12 @@ header {
     font-size: small;
   }
 
+  #index-footer {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .footer-nav h3 {
     font-size: small;
   }
@@ -914,8 +919,7 @@ header {
 
   /* contact section */ 
   .contact-content {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    display: flex;
   }
 }
 
@@ -930,6 +934,7 @@ header {
   }
 
   .hero-content {
+    margin-top: -50px;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
     font-size: x-small;
@@ -943,6 +948,12 @@ header {
   .bio {
     width: 220px;
     font-size: x-small;
+  }
+
+  #index-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .projects-grid {
@@ -989,19 +1000,18 @@ header {
   }
 
   .contact-content {
-    grid-template-columns: 1fr;
-    text-align: center;
+    display: flex;
   }
 }
 
 /* Medium devices: up to 768px (tablets)*/
 @media (max-width: 768px) {
   .site-header {
-    height: 75px;
+    height: 125px;
   }
 
   .hero-content {
-    grid-template-columns: 1fr;
+    grid-template-columns: 2fr;
     text-align: center;
     gap: 30px;
   }
@@ -1012,11 +1022,9 @@ header {
     margin: 0;
     padding: 0;
   }
-
   .hero-video {
-    height: 400px;
+    height: 700px;
   }
-
   .projects-grid {
     grid-template-columns: 1fr;
   }
@@ -1037,19 +1045,10 @@ header {
   }
 
   .contact-content {
-    grid-template-columns: 1fr;
-    gap: 20px;
+    display: inline-flex;
   }
 
   .nav-links {
-    display: none;
-  }
-
-  .hamburger {
-    display: inline-block;
-  }
-
-  .nav-links.show {
-    display: flex;
+    display: inline-flex;
   }
 }
